9/final-exam-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"final-exam-ingress","namespace":"ibrohim-final"},"spec":{"rules":[{"host":"final-exam-ibrohim.sts404.uz","http":{"paths":[{"backend":{"service":{"name":"final-exam-service","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    nginx.ingress.kubernetes.io/rewrite-target: /
  creationTimestamp: "2025-04-12T16:26:22Z"
  generation: 1
  name: final-exam-ingress
  namespace: ibrohim-final
  resourceVersion: "21342937"
  uid: 01e4b604-44ef-4cd0-b40f-46327d1679b8
spec:
  ingressClassName: nginx
  rules:
  - host: final-exam-ibrohim.sts404.uz
    http:
      paths:
      - backend:
          service:
            name: final-exam-service
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 10.233.46.218
